--- a/Form/frmgiahansach.resx
+++ b/Form/frmgiahansach.resx
@@ -112,12 +112,43 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAkGBw0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ8NDQ0NFREWFhURFRUY
+        HSggGBolGxUVITEhJSkrLi4uFx8zODM4NygtLjf/2wBDAQoKCg4NDQ4NDRUrGRUZKysrNy0tKysrLS0r
+        Nys3Nys3KysrKys3LSstLS0rLSs3Nzc3KysrKzcrNystNys3Ky3/wAARCAC3ARQDASIAAhEBAxEB/8QA
+        GQAAAwEBAQAAAAAAAAAAAAAAAAEDAgQF/8QAGhABAQEBAQEBAAAAAAAAAAAAABIRAQITYf/EABoBAQEB
+        AQADAAAAAAAAAAAAAAABAgMEBgf/xAAZEQEBAQEBAQAAAAAAAAAAAAAAERITASH/2gAMAwEAAhEDEQA/
+        APFB4ePoz0asnh4MCs4MawYFZwY1gwpWcPDwYUpYMPDwpWcGNYMKVkNYMSpWTw8PClZwY1gwpWcGNYCl
+        Zw8MypWcGNApWcPDGIUsGHgwKWBrBgVkzwYJSB4AYw8MC0sGGApYMaAVnBjQCs4MaGBWcPDwYIQPBgED
+        w8BkNYArODGhiFLBh4eFKzgxrBglZw8PBgUsGHhhWcDQSlLBh4MEpYMPDwKzgawBU8PDGKtIHgAgeACB
+        mDIxrBiUrJngwSkMPBgFgxoAzh4eDALBhgKWDGsGCVnBjWDEKWDDw8Cs4MawYFZPDw8ErODGsGFKyGsG
+        JSs4bWAKkZhVpDDAUhhjApYGsGBWQ1gwKWDDwYJSwNYMCsjGsGIUsGHh4UrODGsGFSs4eHh4UrODGsGJ
+        SlgxrBhUrODGsGFKzh4eHhSs4MawYlSs4MawYFLCbIKngxrBjVarODGsGJSs4eNYMKlZwY1gwpWcGN4M
+        KVnBjWDClZwY1gxKlZwY1gwKWDGsGFKzgxrBhSlgxrBhUrODGsPEpWcGNYMKVnBjeDCpWcGN4JSlYwYp
+        IkoxgxSfwR1KfU8CvPANLPXPgxrBjVVkN4MKjIxrBhRnBjeDCjGHjWDEozgxvBhUYwYpIkqsYMUkSlJ6
+        ngxWDgpPUsGLQcJpc+oyJX+Zwmlx6hJyvzwfPBpeaHPHThfnhqGdNc3N8z+bog4Nrzc/PBx+OiDlNLzc
+        /PBwvJymmseIQOeF5OU0Y8R54C0g01l58CXRAh005c0JEujngQaObngQ6IODRzc8HC/PBwml5oc8CHRz
+        wcJpebmg4dECDRzQ+ZwvIlNLhHng4Wk5TS4Qg4Wk5NLlGDhWTlNLlKDlWRKaXKciVZEpSJyfPKknJVic
+        iVJOUpEpOVJOUpEpOVYODREpErQITSxGTWgGiOORKsiW61E4EqyJNESkStIlNESkSrIkqRORKsiSkSkS
+        rIlKkTkSpIkpE5OVIEFIngxWD54TREsPFYOE0sRk5Wg5TREZOFpOU0uUoOFZOE0uUoE8Wg4TSxGTlaBB
+        oiM/hytBymiIyJXkSmliEh0SDRHnScrc8nDroyjIleDhNLlzycujng4TRlzQcOiDhNGXPBwvBwaMueBD
+        ogQmjKECHRAg0ZQkS6PmfzTRlzyJdHzP5mky54OHRBwmljng+eF5OU0RCDheThNEQg+eV4EJpYjJytAk
+        0IycrSJTQjJytIlNCUiVsEmhGQtIKOLnhrnhfnk4a07ZQg4Xg4TRlzwcOiBBoy54P5uiBKaMuf5nDogQ
+        aTKECF4OE0ZQgSvAg0RCTheBKaSIQcLScmkiEHC8HCaIhByv8x800ZQk5X+ZwaMueRLpgQmjLng4dEHC
+        bXLmg4dEHBsy5/mPm6IOE0Zc8CHRzwPmaMueOB0/MGjDj54OFoOV08iIwIXg4TSRCDheB8zREJEr/M4T
+        RlzycrwcGjLnk4Xg4NJlzwIdEnCaMuf5nDog4TRlz88HC8HCaMoQJdEHzwaMOeDh0c8HCbXDmg4dMHzw
+        m1w5vmfzdMHCbMOb5n83TBwm15ub5j5umBCbXm5/mfzdEHBtebm+Z/N0wITa83NBOmQaTm87nNa55IO3
+        rUb55EgMrDkSAVIJOQAhyJMJSCRICUh88nIBSeHIkBKs8OT55ASk8OTkBKsHOHICLDk+eQEXzw5OQEWH
+        IwAWDDwAIfODDCLCwYYFjOAAqR//2Q==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAIAICAQAAAAAADoAgAAJgAAABAQEAAAAAAAKAEAAA4DAAAoAAAAIAAAAEAAAAABAAQAAAAAAIAC
