--- a/Form/Frmphanquyen.resx
+++ b/Form/Frmphanquyen.resx
@@ -112,80 +112,81 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
   <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACQ
-        DQAAAk1TRnQBSQFMAgEBAwEAAQQBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEFoAAQ4CAQERARwCAQEmASICAQEvAR0CAQEnARECAQEVAQcCAQEIAQUCAQEF
-        AQoCAQEMARUCAQEbAR8CAQErAR4CAQEpARICAQEWAQcCAQEHAQIDAYQAAYUBtwGFAf8BGQF5ARkB/wEg
-        AX4BIAH/ASQBgAEkAf8BJAGAASQB/wEiAYEBIgH/ASEBgQEhAf8BHQGBAR0B/wEXAYEBFwH/ARQBgQEU
-        Af8BEQGBAREB/wEMAYEBDAH/AQoBegEKAf8BgQGwAYEB/wwAARoCAQEiAUUCAQF5AVECAgGdAUcCAQF/
-        ASoCAQE+ARkCAQEgARMCAQEYAR4CAQEpATMCAQFQAU4CAgGUAUwCAgGOAScCAQE4AQ0CAQEPAQMCAQEC
-        hAABHAGDARwB/wEpAYwBKQH/ATQBkQE0Af8BOQGUATkB/wE5AZQBOQH/ATYBlgE2Af8BMwGaATMB/wEt
-        AZ4BLQH/ASYBowEmAf8BHwGkAR8B/wEXAaQBFwH/AQ8BnwEPAf8BCwGRAQsB/wEKAXkBCgH/DAABVgIC
-        AawBJgGDAbgB/wFgAQQBBgHYAVwCAwHIAVMCAgGjATQCAQFSAS4CAQFFAUECAQFxAVcBSwFeAfcBUQFP
-        AWUB+AFYAgIBtQExAgEBTAEQAgEBEwEDAgEBAwgAA8AB/wPAAf8DwAH/A8AB/wPAAf8DwAH/A8AB/wPA
-        Af8DwAH/A8AB/wPAAf8DwAH/TAABIwGNASMB/wE2AZYBNgH/AUEBnAFBAf8BRwGfAUcB/wFHAZ8BRwH/
-        AUMBoQFDAf8BowHWAaMF/wEuAa8BLgH/ASYBsQEmAf8BHQGyAR0B/wEUAa0BFAH/AQ8BnwEPAf8BDAGB
-        AQwB/wwAAUcCAQF/AbMB7QH8Af8BDgG/AfAB/wFOAVsBdwH7AWACBAHaAVoCAgG8AVQCAgGnAUEBgAGn
-        Af0BrAHwAv8BLwGfAcYB/wFXAgIBtAEoAgEBOgENAgEBDwEDAgEBAggAA8AB/wPAAf8DwAH/AwEB/wMB
-        Af8DAQH/AwEB/wMBAf8DAQH/A8AB/wPAAf8DwAH/TAABLAGRASwB/wFCAZwBQgH/AU0BogFNAf8BUwGk
-        AVMB/wFPAaUBTwH/AUwBpgFMDf8BKwG1ASsB/wEiAbYBIgH/ARgBsQEYAf8BEgGjARIB/wEPAYEBDwH/
-        CAABAwIBAQIBGQIBASEBggG5AdEB/wEfAdAC/wEsAdQB/AH/AT4BfgGRAf4BVAEVARcB8AFRAYgBqwH9
-        AZEB6wL/ARMBzwL/AT8BXQF+AfsBSAICAYIBHwIBASoBCQIBAQoBAgMBCAADwAH/A8AB/wPAAf8DwA3/
-        A4EB/wPAAf8DwAH/A8AB/wPAAf9MAAE2AZYBNgH/AUwBoAFMAf8BVgGlAVYB/wFZAacBWQH/AVYBpwFW
-        Af8BUAGnAVAB/wFKAaoBSg3/ASQBswEkAf8BHgGvAR4B/wEZAaMBGQH/ARUBgQEVAf8IAAEEAgEBBAEP
-        AgEBEgFYAgIBtQF+AeMC/wEYAdEC/wFOAeAB/AH/AW4BtQHZAf8BrgH5Av8BTwHjAv8BEgG7AesB/wFf
-        AQcBCAHdATgCAQFbARwCAQElAQkCAQEKAQMCAQECCAADwAH/A8AB/wPAAf8DAQH/AwEV/wPAAf8DwAH/
-        TAABPwGaAT8B/wFVAaUBVQH/AVwBqAFcAf8BXQGpAV0B/wFYAagBWAH/AVMBpwFTAf8BSwGoAUsB/wFC
-        AaoBQg3/ASMBrAEjAf8BIgGiASIB/wEcAYMBHAH/CAABDwIBARIBHAIBASYBUQICAZwBkQHIAeYB/wEL
-        AcwC/wE3AdsC/wGBAfAC/wGUAf0C/wFoAesC/wEgAY4BuwH/AV4CBAHXAUUCAQF6ASoCAQE9ARUCAQEb
-        AQkCAQEKCAADwAH/A8AB/wMBAf8DAQH/AwER/wMBAf8DwAH/A8AB/0wAAUkBnwFJAf8BXQGpAV0p/wEp
-        AZ4BKQH/ASIBgQEiAf8IAAEpAgEBPAE9AgEBZQFaAgMBwQFJAa4B1AH/AR8B0QL/AR8B0wL/AVkB5gL/
-        AYgB+QL/AYEB9AL/ASgBgQGqAf8BWAIQAe4BWwIDAc0BTwICAZgBLgIBAUYBGgIBASIIAAPAAf8DwAH/
-        AwEB/wMBAf8DARX/A8AB/wPAAf9MAAFPAaIBTwH/AWQBqwFkKf8BMAGaATAB/wEnAYEBJwH/CAABVgIC
-        Aa8BRQFVAWsB+QEUAbsB6wH/AUsB4gL/ASwB1wL/AQ0BzQL/AUMB3wL/AXwB8gL/AZMB/QL/AVsB5AH8
-        Af8BHQGWAcMB/wFMASABLAH0AVwCAwHTAVUCAgGrATYCAQFWCAADwAH/AwEB/wMBAf8DAQH/AwEB/wMB
-        Cf8DAQX/A8AB/wPAAf9MAAFZAacBWQH/AW0BsQFtAf8BawGvAWsB/wFkAasBZAH/AVwBpgFcAf8BUgGi
-        AVIB/wFJAZ8BSQH/AUEBnAFBDf8BMAGaATAB/wE0AZcBNAH/ASsBgQErAf8EAAE7AgEBYAEOAaQB1gH/
-        AUoB4QL/AZAB/AL/AXAB7gL/AT8B3gL/AQ8BzgL/ASkB1gL/AWEB6QL/AZAB/AL/AXgB8QL/ATsB3QL/
-        AQwBvgHwAf8BOwF/AaAB/gFcAgMBxgFFAgEBeAgAA8AB/wMBAf8DAQH/AwEB/wMBDf8DAQH/A8AB/wPA
-        Af8DwAH/TAABXQGpAV0B/wF2AbYBdgH/AXIBtAFyAf8BaAGtAWgB/wFeAagBXgH/AVYBowFWAf8BTAGf
-        AUwN/wE0AZcBNAH/ATUBmAE1Af8BNwGVATcB/wEtAYEBLQH/BAABWwICAb8BsAHfAe4B/wG8AeMB7gH/
-        AacBzAHdAf8BgQGyAcwB/wGUAb8B1AH/AVEB3AL/ARMBzwL/AVEB2AH2Af8BgQGyAcwB/wG7AdwB6AH/
-        AbQB4AHuAf8BsQHnAfYB/wGOAeIB9gH/AVwCAwHGASsCAQFACAADwAH/AwEB/wMBAf8DARX/A8AB/wPA
-        Af8DwAH/TAABaAGvAWgB/wGBAb0BgQH/AXoBuAF6Af8BbQGwAW0B/wFkAasBZAH/AVwBpgFcDf8BPQGZ
-        AT0B/wE6AZkBOgH/AToBmAE6Af8BOQGUATkB/wEtAYEBLQH/BAABUQICAZ0BWwICAb0BWgICAb4BWgIC
-        Ab4BWAICAbIBXgEMARAB4QGTAewC/wENAc0C/wEbAaQB0QH/AVkBGgEgAe0BVQICAakBUwICAaYBUwIC
-        AaEBVgICAbABJgIBATcBEwIBARgIAAPAAf8DgQH/AwEB/wMBAf8DAQH/AwEB/wMBAf8DAQH/AwEB/wMB
-        Af8DwAH/A8AB/0wAAXUBtQF1Af8BjQHGAY0B/wGBAcABgQH/AXkBtwF5Af8BcQGzAXEB/wFqAa4BagH/
-        AbQB2QG0Bf8BVgGlAVYB/wFTAaQBUwH/AUsBoQFLAf8BRAGdAUQB/wE6AZUBOgH/ASgBgQEoAf8YAAFc
-        AgMBxQGkAdkB8gH/ARwB0gL/ASEBiQG4Af8BVgICAbABLAIBAUEBFAIBARkBDAIBAQ4BCgIBAQwBCQIB
-        AQoBBgIBAQYIAAPAAf8DwAH/AwEB/wMBAf8DAQH/AwEB/wMBAf8DAQH/AwEB/wMBAf8DwAH/A8AB/0wA
-        AYEBuwGBAf8BnQHPAZ0B/wGNAcYBjQH/AYEBvAGBAf8BegG4AXoB/wFzAbQBcwH/AW8BsgFvAf8BbAGw
-        AWwB/wFnAa4BZwH/AWABqwFgAf8BWAGnAVgB/wFLAaEBSwH/ATkBlAE5Af8BJAGAASQB/xgAAVMCAgGm
-        AZABxAHgAf8BMAHZAv8BSgFdAXMB+gFNAgIBkAEhAgEBLgEKAgEBCwEDAgECAgMBAQIDAQECAwEIAAPA
-        Af8DwAH/A8AB/wPAAf8DwAH/A8AB/wPAAf8DwAH/A8AB/wPAAf8DwAH/A8AB/0wAAbEB2AGxAf8BgAG7
-        AYAB/wFxAbMBcQH/AWUBrQFlAf8BXQGpAV0B/wFZAacBWQH/AVQBpAFUAf8BVQGlAVUB/wFQAaMBUAH/
-        AUkBoAFJAf8BRQGeAUUB/wE7AZgBOwH/AS0BjAEtAf8BigG7AYoB/xgAAUYCAQF9AWMCDAHcAUgBzwHw
-        Af8BYAEGAQcB1gE8AgEBYwEaAgEBIgEHAgEBB+gAAUECAQFwAVsCAgG/ARkCAQEgnAABQgFNAT4HAAE+
-        AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAv8BwAEAAv8CAAGAAQEBwAEAAv8CAAGAAQEBwAEA
-        AcABAwIAAYABAQHAAQABwAEDAgABgAEBAYABAAHAAQMCAAGAAQEBgAEAAcABAwIAAYABAQGAAQABwAED
-        AgABgAEBAYABAAHAAQMCAAGAAQEBgAEAAcABAwIAAYABAQIAAcABAwIAAYABAQIAAcABAwIAAYABAQIA
-        AcABAwIAAYABAQH4AQABwAEDAgABgAEBAfgBAAHAAQMCAAGAAQEB+AEPAv8CAAL/AfwBfwL/AgAL
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAI
+        DQAAAk1TRnQBSQFMAgEBAwEAARwBAAEcAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEFoAAw0BEQMbASYDIAEvAxwBJwMQARUDBgEIAwQBBQMJAQwDFAEbAx4BKwMd
+        ASkDEAEWAwUBBwMAAQGEAAGFAbcBhQH/ARYBdgEWAf8BHQF7AR0B/wEhAYABIQH/ASEBgAEhAf8BHwGB
+        AR8B/wEeAYEBHgH/ARoBgQEaAf8BFAGBARQB/wERAYEBEQH/AQ4BgQEOAf8BCQGBAQkB/wEHAXcBBwH/
+        AYEBsAGBAf8MAAMYASIBRAJDAXkBUAJLAZ0BRgJEAX8DKQE+AxcBIAMSARgDHQEpAzIBUAFOAkoBlAFL
+        AkkBjgMmATgDCwEPAwEBAoQAARkBgwEZAf8BJgGMASYB/wExAZEBMQH/ATYBlAE2Af8BNgGUATYB/wEz
+        AZYBMwH/ATABmgEwAf8BKgGeASoB/wEjAaMBIwH/ARwBpAEcAf8BFAGkARQB/wEMAZ8BDAH/AQgBkQEI
+        Af8BBwF2AQcB/wwAAVQCTAGsASMBgwG4Af8BXgI9AdgBWwJHAcgBUgJLAaMDMwFSAy0BRQNAAXEBVAFR
+        AVsB9wFUAVIBXwH4AVUCSgG1AzABTAMOARMDAgEDCAADwAH/A8AB/wPAAf8DwAH/A8AB/wPAAf8DwAH/
+        A8AB/wPAAf8DwAH/A8AB/wPAAf9MAAEgAY0BIAH/ATMBlgEzAf8BPgGcAT4B/wFEAZ8BRAH/AUQBnwFE
+        Af8BQAGhAUAB/wGjAdYBowX/ASsBrwErAf8BIwGxASMB/wEaAbIBGgH/AREBrQERAf8BDAGfAQwB/wEJ
+        AYEBCQH/DAABRgJEAX8BswHtAfwB/wELAb8B8AH/AU4BWwFuAfsBXgI6AdoBWAJJAbwBUgJMAacBQAGA
+        AacB/QGsAfAC/wEsAZ8BxgH/AVYCSgG0AycBOgMLAQ8DAQECCAADwAH/A8AB/wPAAf8DAAH/AwAB/wMA
+        Af8DAAH/AwAB/wMAAf8DwAH/A8AB/wPAAf9MAAEpAZEBKQH/AT8BnAE/Af8BSgGiAUoB/wFQAaQBUAH/
+        AUwBpQFMAf8BSQGmAUkN/wEoAbUBKAH/AR8BtgEfAf8BFQGxARUB/wEPAaMBDwH/AQwBgQEMAf8IAAMB
+        AQIDGAEhAYIBuQHRAf8BHAHQAv8BKQHUAfwB/wE+AX4BiwH+AVQBKwEsAfABTgGIAagB/QGRAesC/wEQ
+        Ac8C/wE8AV0BdQH7AUcCRgGCAx0BKgMHAQoDAAEBCAADwAH/A8AB/wPAAf8DwA3/A4EB/wPAAf8DwAH/
+        A8AB/wPAAf9MAAEzAZYBMwH/AUkBoAFJAf8BUwGlAVMB/wFWAacBVgH/AVMBpwFTAf8BTQGnAU0B/wFH
+        AaoBRw3/ASEBswEhAf8BGwGvARsB/wEWAaMBFgH/ARIBgQESAf8IAAMDAQQDDQESAVUCSgG1AXsB4wL/
+        ARUB0QL/AUsB4AH8Af8BawG1AdkB/wGuAfkC/wFMAeMC/wEPAbsB6wH/AV4COAHdAzcBWwMaASUDBwEK
+        AwEBAggAA8AB/wPAAf8DwAH/AwAB/wMAFf8DwAH/A8AB/0wAATwBmgE8Af8BUgGlAVIB/wFZAagBWQH/
+        AVoBqQFaAf8BVQGoAVUB/wFQAacBUAH/AUgBqAFIAf8BPwGqAT8N/wEgAawBIAH/AR8BogEfAf8BGQGD
+        ARkB/wgAAw0BEgMbASYBUQJLAZwBkQHIAeYB/wEIAcwC/wE0AdsC/wGBAfAC/wGUAf0C/wFlAesC/wEd
+        AY4BuwH/AV0CPQHXAUQCQwF6AygBPQMUARsDBwEKCAADwAH/A8AB/wMAAf8DAAH/AwAR/wMAAf8DwAH/
+        A8AB/0wAAUYBnwFGAf8BWgGpAVop/wEmAZ4BJgH/AR8BgQEfAf8IAAMoATwDOwFlAVgCSAHBAUYBrgHU
+        Af8BHAHRAv8BHAHTAv8BVgHmAv8BiAH5Av8BgQH0Av8BJQGBAaoB/wFYAioB7gFaAkMBzQFOAkoBmAMt
+        AUYDGAEiCAADwAH/A8AB/wMAAf8DAAH/AwAV/wPAAf8DwAH/TAABTAGiAUwB/wFhAasBYSn/AS0BmgEt
+        Af8BJAGBASQB/wgAAVQCSwGvAUUBUgFqAfkBEQG7AesB/wFIAeIC/wEpAdcC/wEKAc0C/wFAAd8C/wF5
+        AfIC/wGTAf0C/wFYAeQB/AH/ARoBlgHDAf8BUQEsATcB9AFaAj8B0wFUAk0BqwM1AVYIAAPAAf8DAAH/
+        AwAB/wMAAf8DAAH/AwAJ/wMABf8DwAH/A8AB/0wAAVYBpwFWAf8BagGxAWoB/wFoAa8BaAH/AWEBqwFh
+        Af8BWQGmAVkB/wFPAaIBTwH/AUYBnwFGAf8BPgGcAT4N/wEtAZoBLQH/ATEBlwExAf8BKAGBASgB/wQA
+        AToCOQFgAQsBpAHWAf8BRwHhAv8BkAH8Av8BbQHuAv8BPAHeAv8BDAHOAv8BJgHWAv8BXgHpAv8BkAH8
+        Av8BdQHxAv8BOAHdAv8BCQG+AfAB/wE7AX8BmgH+AVsCRgHGA0MBeAgAA8AB/wMAAf8DAAH/AwAB/wMA
+        Df8DAAH/A8AB/wPAAf8DwAH/TAABWgGpAVoB/wFzAbYBcwH/AW8BtAFvAf8BZQGtAWUB/wFbAagBWwH/
+        AVMBowFTAf8BSQGfAUkN/wExAZcBMQH/ATIBmAEyAf8BNAGVATQB/wEqAYEBKgH/BAABWQJJAb8BsAHf
+        Ae4B/wG8AeMB7gH/AacBzAHdAf8BgQGyAcwB/wGUAb8B1AH/AU4B3AL/ARABzwL/AU4B2AH2Af8BgQGy
+        AcwB/wG7AdwB6AH/AbQB4AHuAf8BsQHnAfYB/wGOAeIB9gH/AVsCRgHGAyoBQAgAA8AB/wMAAf8DAAH/
+        AwAV/wPAAf8DwAH/A8AB/0wAAWUBrwFlAf8BgQG9AYEB/wF3AbgBdwH/AWoBsAFqAf8BYQGrAWEB/wFZ
+        AaYBWQ3/AToBmQE6Af8BNwGZATcB/wE3AZgBNwH/ATYBlAE2Af8BKgGBASoB/wQAAVACSwGdAVoCSgG9
+        AVkCSQG+AVkCSQG+AVUCSwGyAV4BOAE6AeEBkwHsAv8BCgHNAv8BGAGkAdEB/wFcATMBNwHtAVICSwGp
+        AVICTAGmAVICTAGhAVUCSwGwAyUBNwMSARgIAAPAAf8DgQH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/
+        AwAB/wMAAf8DwAH/A8AB/0wAAXIBtQFyAf8BjQHGAY0B/wGBAcABgQH/AXYBtwF2Af8BbgGzAW4B/wFn
+        Aa4BZwH/AbQB2QG0Bf8BUwGlAVMB/wFQAaQBUAH/AUgBoQFIAf8BQQGdAUEB/wE3AZUBNwH/ASUBgQEl
+        Af8YAAFaAkgBxQGkAdkB8gH/ARkB0gL/AR4BiQG4Af8BVQJLAbADKgFBAxIBGQMKAQ4DCQEMAwcBCgME
+        AQYIAAPAAf8DwAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DwAH/A8AB/0wAAYEBuwGB
+        Af8BnQHPAZ0B/wGNAcYBjQH/AYEBvAGBAf8BdwG4AXcB/wFwAbQBcAH/AWwBsgFsAf8BaQGwAWkB/wFk
+        Aa4BZAH/AV0BqwFdAf8BVQGnAVUB/wFIAaEBSAH/ATYBlAE2Af8BIQGAASEB/xgAAVICTAGmAZABxAHg
+        Af8BLQHZAv8BTQFXAXAB+gFMAkkBkAMgAS4DCAELAwEBAgMAAQEDAAEBAwABAQgAA8AB/wPAAf8DwAH/
+        A8AB/wPAAf8DwAH/A8AB/wPAAf8DwAH/A8AB/wPAAf8DwAH/TAABsQHYAbEB/wGAAbsBgAH/AW4BswFu
+        Af8BYgGtAWIB/wFaAakBWgH/AVYBpwFWAf8BUQGkAVEB/wFSAaUBUgH/AU0BowFNAf8BRgGgAUYB/wFC
+        AZ4BQgH/ATgBmAE4Af8BKgGMASoB/wGKAbsBigH/GAABRQJEAX0BYQI8AdwBRQHPAfAB/wFgAT0BQAHW
+        ATsCOgFjAxgBIgMFAQfoAAFAAj8BcAFZAkkBvwMXASCcAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEB
+        AQABAQUAAYAXAAP/AQAC/wHAAQAC/wIAAYABAQHAAQAC/wIAAYABAQHAAQABwAEDAgABgAEBAcABAAHA
+        AQMCAAGAAQEBgAEAAcABAwIAAYABAQGAAQABwAEDAgABgAEBAYABAAHAAQMCAAGAAQEBgAEAAcABAwIA
+        AYABAQGAAQABwAEDAgABgAEBAgABwAEDAgABgAEBAgABwAEDAgABgAEBAgABwAEDAgABgAEBAfgBAAHA
+        AQMCAAGAAQEB+AEAAcABAwIAAYABAQH4AQ8C/wIAAv8B/AF/Av8CAAs=
 </value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>32</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAICAQAAAAAADoAgAAFgAAACgAAAAgAAAAQAAAAAEABAAAAAAAgAIAAAAAAAAAAAAAAAAAAAAA
